--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       <a class="dropdown-item" href="#">Carnegie Mellon Police Department </a>
                       <a class="dropdown-item" href="#">Center for Student Diversity and Inclusion </a>
                       <a class="dropdown-item" href="#">Alumni Association </a>
-                      <a class="dropdown-item" href="#">Housing and Dining Services </a>
+                      <a class="dropdown-item" href="healthdining.html">Housing and Dining Services </a>
                     </div>
                   </div>
 
@@ -181,7 +181,7 @@
         <p class="description">○ Rez on Fifth Second Floor</p>
 
         <p class="intro">
-          <b>Find out more </b>   <a href="#">Here</a>
+          <b>Find out more </b>   <a href="healthdining.html">Here</a>
         </p>
 
       </div>
